--- a/bbdd_ejem14/src/main/resources/application.properties
+++ b/bbdd_ejem14/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=pass
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.mustache.suffix=.html
